fix login modal on small screen

--- a/frontend/src/styles/karaokemugen.scss
+++ b/frontend/src/styles/karaokemugen.scss
@@ -1261,6 +1261,6 @@ input[type="text"]:focus, input[type="password"]:focus {
 	background-color: white !important;
 }
 
-#nav-userlist {
+#nav-userlist,#nav-login {
 	max-height: calc(100vh - 200px);
 }
